@@ -513,7 +513,7 @@ void AGE_Frame::CreateTerrainBorderControls()
 
 void AGE_Frame::OnKillFocus_Borders(wxFocusEvent &event)
 {
-	event.Skip();
+	//event.Skip();
 	if(((AGETextCtrl*)event.GetEventObject())->SaveEdits() != 0) return;
 	if(event.GetId() == Borders_Name[0]->GetId() || event.GetId() == Borders_Name[1]->GetId())
 	{
