@@ -477,7 +477,7 @@ void AGE_Frame::CreateTerrainRestrictionControls()
 
 void AGE_Frame::OnKillFocus_TerRestrict(wxFocusEvent &event)
 {
-	event.Skip();
+	//event.Skip();
 	if(((AGETextCtrl*)event.GetEventObject())->SaveEdits() != 0) return;
 	ListTerrains2();
 }
